superset-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset
  labels:
    app: superset
spec:
  ports:
    - name: http
      port: 8088
      targetPort: 8088
  selector:
    app: superset
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:944080346050:certificate/4d0e80fa-c4d6-433e-b60c-e5313ac23ba8
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/actions.ssl-redirect":"{\"Type\": \"redirect\", \"RedirectConfig\": { \"Protocol\": \"HTTPS\", \"Port\": \"443\", \"StatusCode\": \"HTTP_301\"}}","alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:us-east-1:944080346050:certificate/4d0e80fa-c4d6-433e-b60c-e5313ac23ba8","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTP\": 80}, {\"HTTPS\":443}]","alb.ingress.kubernetes.io/scheme [...]
  finalizers:
  - ingress.k8s.aws/resources
  generation: 1
  name: superset
  namespace: superset
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: superset
            port:
              number: 8088
        path: /
        pathType: Prefix
